# ReproductorMusica

./: .gitignore  CONTEXT_MAP.md  README.md  library.json  main.py  styles.tcss
core/: ARCHITECTURE_MASTER_PLAN.md  README.md  backend.py  bridge.py  cava.py  input.py  logger.py  user_manager.py
core/engine/: CMakeLists.txt  ESTUDIO_HPP_CPP_H_TXT.md  README_ENGINE.md  REPORTE_HPP_CPP.md
core/engine/include/: AudioPlayer.hpp  CApi.hpp  DirectoryScanner.hpp  DoublyLinkedList.hpp  Engine.hpp  LibraryManager.hpp  PlaybackState.hpp  QueueManager.hpp  SpectrumAnalyzer.hpp  Track.hpp  UserManager.hpp
core/engine/src/: AudioPlayer.cpp  CApi.cpp  DirectoryScanner.cpp  DoublyLinkedList.cpp  Engine.cpp  LibraryManager.cpp  PlaybackState.cpp  QueueManager.cpp  SpectrumAnalyzer.cpp  UserManager.cpp
ui/: info_panel.py  modals.py  player.py  views.py  visualizer.py
